--- a/foundations/flex/04-flex-information/index.html
+++ b/foundations/flex/04-flex-information/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="title">Information!</div>
-    <div class ='info-row'>
+    <div class ='info'>
       <img src="./images/barberry.png" alt="barberry">
       <div class="text">This is a type of plant. We love this one.</div>
       
