--- a/foundations/flex/04-flex-information/index.html
+++ b/foundations/flex/04-flex-information/index.html
@@ -8,19 +8,25 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class ='info'>
+    <div class="info">
       <div class="title">Information!</div>
-      <div class="plant-img">
-        <img src="./images/barberry.png" class='plant-img' alt="barberry">
-        <img src="./images/chilli.png" class='plant-img' alt="chili">
-        <img src="./images/pepper.png" class='plant-img' alt="pepper">
-        <img src="./images/saffron.png" class='plant-img' alt="saffron">
-      </div>
-      <div class="plant-text">
-        <div class="text">This is a type of plant. We love this one.</div>
-        <div class="text">This is another type of plant. Isn't it nice?</div>
-        <div class="text">We have so many plants. Yay plants.</div>
-        <div class="text">I'm running out of things to say about plants.</div>
+      <div class="plants">
+        <div class="plant-block">
+          <img src="./images/barberry.png" alt="barberry">
+          <div class="text">This is a type of plant. We love this one.</div>
+        </div>
+        <div class="plant-block">
+          <img src="./images/chilli.png" alt="chili">
+          <div class="text">This is another type of plant. Isn't it nice?</div>
+        </div>
+        <div class="plant-block">
+          <img src="./images/pepper.png" alt="pepper">
+          <div class="text">We have so many plants. Yay plants.</div>
+        </div>
+        <div class="plant-block">
+          <img src="./images/saffron.png" alt="saffron">
+          <div class="text">I'm running out of things to say about plants.</div>
+        </div>
       </div>
     </div>
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
